--- a/natura_print/views/label_template_views.xml
+++ b/natura_print/views/label_template_views.xml
@@ -17,17 +17,21 @@
         </div>
                 <header>
                     <button name="action_open_test_print" type="object" string="Test Print" class="btn-primary"/>
+                    <button name="action_update_preview" type="object" string="Update Preview" class="btn-secondary"/>
                 </header>
                 <field name="model_id" invisible="1"/>
-                <group>
+                <group col="2">
                     <group>
                         <field name="model_id" options="{'no_create': True}"/>
                         <field name="width"/>
-                        <field name="dpi"/>
-                    </group>
-                    <group>
                         <field name="height"/>
+                        <field name="dpi"/>
                         <field name="active"/>
+                    </group>
+                    <group class="o_natura_preview">
+                        <field name="preview_image" widget="image" nolabel="1" colspan="4"/>
+                        <field name="preview_error" readonly="1" nolabel="1"/>
+                        <div class="text-muted o_natura_preview_caption">Preview powered by Labelary ™</div>
                     </group>
                 </group>
                 <separator string="ZPL Code"/>
@@ -38,9 +42,11 @@
                     <page string="Placeholders">
                         <field name="placeholder_ids">
                             <tree editable="bottom">
+                                <field name="template_id" invisible="1"/>
+                                <field name="related_model" invisible="1"/>
                                 <field name="placeholder"/>
-                                <field name="model_id" invisible="1"/>
-                                <field name="field_id" domain="[('model_id', '=', model_id), ('ttype', 'not in', ('one2many', 'many2many'))]"/>
+                                <field name="field_id" domain="[('model_id', '=', parent.model_id), ('ttype', 'not in', ('one2many', 'many2many'))]" options="{'no_create': True, 'no_create_edit': True}"/>
+                                <field name="related_field_id" domain="[('model', '=', related_model), ('ttype', 'not in', ('one2many', 'many2many'))]" options="{'no_create': True, 'no_create_edit': True}"/>
                             </tree>
                         </field>
                     </page>
