--- a/natura_print/views/label_template_views.xml
+++ b/natura_print/views/label_template_views.xml
@@ -31,7 +31,7 @@
                     <group class="o_natura_preview">
                         <field name="preview_image" widget="image" nolabel="1" colspan="4"/>
                         <field name="preview_error" readonly="1" nolabel="1"/>
-                        <div class="text-muted o_natura_preview_caption">Preview powered by Labelary ™</div>
+                        <div class="text-muted o_natura_preview_caption">Preview powered by Labelary (TM)</div>
                     </group>
                 </group>
                 <separator string="ZPL Code"/>
@@ -42,11 +42,11 @@
                     <page string="Placeholders">
                         <field name="placeholder_ids">
                             <tree editable="bottom">
-                                <field name="template_id" invisible="1"/>
                                 <field name="related_model" invisible="1"/>
                                 <field name="placeholder"/>
-                                <field name="field_id" domain="[('model_id', '=', parent.model_id), ('ttype', 'not in', ('one2many', 'many2many'))]" options="{'no_create': True, 'no_create_edit': True}"/>
-                                <field name="related_field_id" domain="[('model', '=', related_model), ('ttype', 'not in', ('one2many', 'many2many'))]" options="{'no_create': True, 'no_create_edit': True}"/>
+                                <field name="field_id" domain="[('model_id', '=', parent.model_id)]" options="{'no_create': True, 'no_create_edit': True}"/>
+                                <field name="related_field_id" domain="[('model', '=', related_model)]" options="{'no_create': True, 'no_create_edit': True}"/>
+                                <field name="field_path" readonly="1"/>
                             </tree>
                         </field>
                     </page>
@@ -62,6 +62,7 @@
     <field name="arch" type="xml">
         <tree string="ZPL Label Templates">
             <field name="name" string="Title"/>
+            <field name="model_id"/>
             <field name="width"/>
             <field name="dpi"/>
             <field name="height"/>
@@ -81,6 +82,7 @@
             <field name="height"/>
             <field name="active"/>
             <filter string="DPI" name="dpi_group" context="{'group_by': 'dpi'}"/>
+            <filter string="Model" name="model_id_group" context="{'group_by': 'model_id'}"/>
             <separator/>
             <filter string="Active" name="active" domain="[('active', '=', True)]"/>
             <filter string="Inactive" name="inactive" domain="[('active', '=', False)]"/>
