--- a/natura_print/views/stock_lot_views.xml
+++ b/natura_print/views/stock_lot_views.xml
@@ -12,4 +12,16 @@
             </xpath>
         </field>
     </record>
+    <record id="stock_lot_form_view_inherit_natura_print" model="ir.ui.view">
+        <field name="name">stock.lot.form.view.inherit.natura_print</field>
+        <field name="model">stock.lot</field>
+        <field name="inherit_id" ref="stock.view_production_lot_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@class='oe_title']" position="before">
+                <div class="o_natura_print_action">
+                    <button name="action_open_print_wizard" type="object" string="Print Labels" class="btn btn-secondary"/>
+                </div>
+            </xpath>
+        </field>
+    </record>
 </odoo>
