--- a/natura_print/views/lot_label_wizard_views.xml
+++ b/natura_print/views/lot_label_wizard_views.xml
@@ -19,12 +19,15 @@
                         </field>
                     </group>
                     <field name="show_csv_button" invisible="1"/>
+                    <field name="show_automation_button" invisible="1"/>
                 </sheet>
                 <footer>
                     <button name="action_open_csv_wizard" type="object" string="Print from CSV" class="btn-secondary"
                         invisible="not show_csv_button"/>
                     <button name="action_open_edit_wizard" type="object" string="Print with Edits" class="btn-secondary"
                         invisible="not show_csv_button"/>
+                    <button name="action_open_label_automation_wizard" type="object" string="Label Automations"
+                        class="btn-secondary" invisible="not show_automation_button"/>
                     <button name="action_send_labels" type="object" string="Print" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary" special="cancel"/>
                 </footer>
