--- a/natura_print/views/stock_lot_views.xml
+++ b/natura_print/views/stock_lot_views.xml
@@ -17,7 +17,7 @@
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet" position="inside">
+            <xpath expr="//form" position="inside">
                 <field name="x_studio_batch_result" invisible="1"/>
             </xpath>
             <xpath expr="//div[@class='oe_title']" position="before">
