--- a/natura_print/views/label_automation_views.xml
+++ b/natura_print/views/label_automation_views.xml
@@ -26,10 +26,9 @@
                     </div>
                     <group>
                         <field name="active"/>
-                        <field name="model_id" options="{'no_create': True}" domain="[('id', 'in', available_model_ids)]"/>
+                        <field name="model_id" options="{'no_create': True}" domain="[('model', 'in', ('product.template', 'stock.lot', 'stock.quant', 'mrp.production'))]"/>
                         <field name="webhook_url"/>
                     </group>
-                    <field name="available_model_ids" invisible="1"/>
                 </sheet>
             </form>
         </field>
