--- a/natura_print/views/label_template_views.xml
+++ b/natura_print/views/label_template_views.xml
@@ -17,21 +17,17 @@
         </div>
                 <header>
                     <button name="action_open_test_print" type="object" string="Test Print" class="btn-primary"/>
-                    <button name="action_update_preview" type="object" string="Update Preview" class="btn-secondary"/>
                 </header>
                 <field name="model_id" invisible="1"/>
-                <group col="2">
+                <group>
                     <group>
                         <field name="model_id" options="{'no_create': True}"/>
                         <field name="width"/>
-                        <field name="height"/>
                         <field name="dpi"/>
-                        <field name="active"/>
                     </group>
-                    <group class="o_natura_preview">
-                        <field name="preview_image" widget="image" nolabel="1" colspan="4"/>
-                        <field name="preview_error" readonly="1" nolabel="1"/>
-                        <div class="text-muted o_natura_preview_caption">Preview powered by Labelary (TM)</div>
+                    <group>
+                        <field name="height"/>
+                        <field name="active"/>
                     </group>
                 </group>
                 <separator string="ZPL Code"/>
@@ -42,11 +38,9 @@
                     <page string="Placeholders">
                         <field name="placeholder_ids">
                             <tree editable="bottom">
-                                <field name="related_model" invisible="1"/>
                                 <field name="placeholder"/>
-                                <field name="field_id" domain="[('model_id', '=', parent.model_id)]" options="{'no_create': True, 'no_create_edit': True}"/>
-                                <field name="related_field_id" domain="[('model', '=', related_model)]" options="{'no_create': True, 'no_create_edit': True}"/>
-                                <field name="field_path" readonly="1"/>
+                                <field name="model_id" invisible="1"/>
+                                <field name="field_id" domain="[('model_id', '=', model_id), ('ttype', 'not in', ('one2many', 'many2many'))]"/>
                             </tree>
                         </field>
                     </page>
@@ -62,7 +56,6 @@
     <field name="arch" type="xml">
         <tree string="ZPL Label Templates">
             <field name="name" string="Title"/>
-            <field name="model_id"/>
             <field name="width"/>
             <field name="dpi"/>
             <field name="height"/>
@@ -82,7 +75,6 @@
             <field name="height"/>
             <field name="active"/>
             <filter string="DPI" name="dpi_group" context="{'group_by': 'dpi'}"/>
-            <filter string="Model" name="model_id_group" context="{'group_by': 'model_id'}"/>
             <separator/>
             <filter string="Active" name="active" domain="[('active', '=', True)]"/>
             <filter string="Inactive" name="inactive" domain="[('active', '=', False)]"/>
