--- a/natura_print/views/csv_label_wizard_views.xml
+++ b/natura_print/views/csv_label_wizard_views.xml
@@ -7,8 +7,10 @@
             <form string="Print Labels from CSV">
                 <sheet>
                     <field name="mapping_json" invisible="1" force_save="1"/>
+                    <field name="test_print_done" invisible="1"/>
+                    <field name="source_model" invisible="1"/>
                     <group>
-                        <field name="template_id" required="1"/>
+                        <field name="template_id" required="1" domain="[('model_id.model', '=', source_model), ('company_id', 'in', allowed_company_ids)]"/>
                         <field name="printer_id" required="1"/>
                     </group>
                     <group>
@@ -40,7 +42,9 @@
                     </group>
                 </sheet>
                 <footer>
-                    <button name="action_print_csv" type="object" string="Print" class="btn-primary"/>
+                    <button name="action_test_print_csv" type="object" string="Test Print" class="btn-secondary" help="Prints First X Number of Rows"/>
+                    <button name="action_print_csv_remainder" type="object" string="Print Remainder" class="btn-secondary" invisible="not test_print_done"/>
+                    <button name="action_print_csv" type="object" string="Print All" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary" special="cancel"/>
                 </footer>
             </form>
