module intializer Fix and fix for wizard tree view to display product and lot names  to Dev Branch

--- a/natura_print/views/lot_label_wizard_views.xml
+++ b/natura_print/views/lot_label_wizard_views.xml
@@ -13,7 +13,8 @@
                     <group>
                         <field name="line_ids">
                             <tree editable="bottom">
-                                <field name="lot_id"/>
+                                <field name="line_label" readonly="1"/>
+                                <field name="lot_id" column_invisible="1"/>
                                 <field name="qty"/>
                             </tree>
                         </field>
