--- a/natura_print/views/quant_label_wizard_views.xml
+++ b/natura_print/views/quant_label_wizard_views.xml
@@ -13,6 +13,7 @@
                     <group>
                         <field name="line_ids">
                             <tree editable="bottom">
+                                <field name="line_label" readonly="1"/>
                                 <field name="quant_id"/>
                                 <field name="qty"/>
                             </tree>
